# yodeakol

./: .gitignore  pyproject.toml  yodeakol.py
templates/: index.html  search.html
